# angkasawan

./: .bootstrap  .editorconfig  .gitignore  Angkasawan.sln  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
core/: CMakeLists.txt  core_minimal.h  engine.cpp  engine.h  engine_api.h
core/cmdline/: CMakeLists.txt
core/cmdline/private/src/: cmdline.cpp  option.cpp  program_options.cpp
core/input/: io.cpp  io.h
core/module/: module_interface.h  module_manager.cpp  module_manager.h
core/platform/: CMakeLists.txt
core/platform/private/inl/: platform_header.h
core/platform/private/src/: application.cpp  io.cpp
core/platform_interface/: platform_common.h  platform_interface.h
core/platform_interface/win/: win_interface.cpp  win_interface.h
core/private/src/: engine.cpp  io.cpp  windowing.cpp
core/private/src/win/: cursor.cpp  event_queue.cpp  file_watcher.cpp  file_watcher.cxx  win_cursor.cpp  win_engine.cpp  win_event_queue.cpp  win_stat.cpp  win_windowing.cpp  windowing.cpp
core/public/core/: application.h  core_minimal.h  cursor.h  engine.h  event_queue.h  io.h  io_enums.h  stat.h  windowing.h
core/public/inl/core/: cursor.h  engine_api.h  engine_common.h  file_watcher.h  file_watcher.ixx  stat.h  windowing.h
core/serialization/: CMakeLists.txt
core/serialization/public/core.serialization/: file.hpp
core/shared/: engine_common.h
core/time/: system_clock.h
core/time/win/: win_clock.cpp  win_clock.h
core/utility/: bootstrapper.cpp  bootstrapper.h
core/windowing/: windowing.cpp  windowing.h
exe/: CMakeLists.txt  angkasawan.cpp  angkasawan.h  main.cpp
foundation/: .natvis  CMakeLists.txt  common.h  foundation_api.h
foundation/allocator/: linear_allocator.h  page_allocator.h  stack_allocator.h
foundation/containers/: array.h  bitset.h  hash.h  map.h  set.h  string.h  utility.h
foundation/graphs/: dag.h
foundation/math/: math.h  matrix.h  quaternion.h  vector.h
foundation/memory/: memory.cpp  memory.h
foundation/stream/: fstream.h
foundation/stream/flags/: stream_flags.h
foundation/stream/win/: win_fstream.cpp
foundation/types/: handle.h  strong_type.h
os_header/: CMakeLists.txt  os_platform.h  os_shims.h
renderer/: CMakeLists.txt  module.cpp
renderer/private/include/: README.md
renderer/private/include/rhi/: shader_compiler.h
renderer/private/src/: render_graph.cpp  renderer.cpp  resource_store.cpp  rhi.cpp  task_controller.cpp  task_queue.cpp
renderer/private/src/rhi/: shader_compiler.cpp  vk.cpp  vk_command_buffer.cpp  vk_device.cpp
renderer/public/renderer/: command_buffer.h  device.h  render_graph.h  renderer.h  renderer_api.h  renderer_minimal.h  resource_store.h  rhi.h  task_controller.h  task_queue.h
rhi/: CMakeLists.txt
rhi/private/include/vulkan/: api.ixx  vk.h  vk_device.h
rhi/private/src/: common.cpp  common.cxx  resource.cpp  rhi.cpp  work_graph.cpp
rhi/private/src/util/: spirv_shader_compiler.cpp
rhi/private/src/vulkan/: api.cxx  buffer.cpp  buffer.cxx  command_buffer.cpp  command_buffer.cxx  command_pool.cpp  command_pool.cxx  device.cpp  device.cxx  image.cpp  image.cxx  pipeline.cpp  pipeline.cxx  resource.cxx  sampler.cpp  sampler.cxx  shader.cpp  shader.cxx  swapchain.cpp  swapchain.cxx  sync.cpp  sync.cxx  vk.cpp
rhi/public/rhi/: buffer.h  command_buffer.h  command_pool.h  common.h  common.ixx  constants.h  device.h  image.h  pipeline.h  resource.h  rhi.h  rhi.ixx  rhi_api.h  sampler.h  shader.h  swapchain.h  sync.h  work_graph.h
rhi/public/rhi/util/: shader_compiler.h
sandbox/: CMakeLists.txt  module.cpp
sandbox/demo/: CMakeLists.txt
sandbox/demo/private/include/: camera.hpp  geometry_cache.hpp  model_demo_app.hpp  model_importer.hpp
sandbox/demo/private/src/: camera.cpp  command_queue.cpp  geometry_cache.cpp  image_importer.cpp  model_demo_app.cpp  model_importer.cpp  sandbox.cpp
sandbox/demo/public/demo/: graphics_processing_unit.hpp  sandbox.hpp
sandbox/private/include/: bindable_structure.h  buffer_view_registry.h  camera.h  command_queue.h  geometry.h  geometry_cache.h  geometry_cache.hpp  image_importer.h  image_importer.hpp  input_assembler.h  model_importer.h  resource_cache.h  sandbox_demo_application.h  sandbox_demo_application.hpp  submission_queue.h  triangle_demo_app.h  upload_heap.h  work_graph.ixx
sandbox/private/include/demo/: model_demo_app.h  model_demo_app.hpp  triangle_demo_app.h
sandbox/private/src/: application_window.cpp  buffer_view_registry.cpp  camera.cpp  command_queue.cpp  geometry_cache.cpp  graphics_processing_unit.cpp  image_importer.cpp  input_assembler.cpp  model_importer.cpp  resource_cache.cpp  sandbox.cpp  submission_queue.cpp  triangle_demo_app.cpp  upload_heap.cpp
sandbox/private/src/demo/: model_demo_app.cpp  triangle_demo_app.cpp
sandbox/public/sandbox/: application_window.h  application_window.hpp  command_queue.hpp  graphics_processing_unit.h  graphics_processing_unit.hpp  sandbox.h  sandbox.hpp  sandbox_api.hpp  upload_heap.h  upload_heap.hpp
sandbox/serialization/private/src/: buffer.cpp
sandbox/serialization/public/core.serialization/: buffer.hpp  read_stream.hpp  sbf_header.hpp  write_stream.hpp
src/core/cmdline/: CMakeLists.txt
src/core/platform/: CMakeLists.txt
src/core/serialization/: CMakeLists.txt
src/gpu/: CMakeLists.txt
src/gpu/private/src/: common.cpp  shader_compiler.cpp  shaderc_shader_compiler.cpp.deprecated  slang_shader_compiler.cpp
src/gpu/public/gpu/: common.hpp  constants.hpp  gpu.hpp  gpu_api.hpp  hana.slang  meta.hpp  shader_compiler.hpp  shared_resource.hpp
src/math/: CMakeLists.txt
src/math/math/: common.h  matrix.h
src/render/: CMakeLists.txt
src/render/private/src/: async_device.cpp  command_queue.cpp  material.cpp  mesh.cpp  pipeline_cache.cpp  upload_heap.cpp
src/render/public/render/: async_device.hpp  command_queue.hpp  gpu_ptr.hpp  material.hpp  mesh.hpp  (+4 more)
src/sandbox/demo/: CMakeLists.txt  main.cpp
src/warp/: CMakeLists.txt
tools/makesbf/: CMakeLists.txt
unit_tests/: CMakeLists.txt
unit_tests/foundation/: CMakeLists.txt  main.cpp
(+300 files in other folders)
